nginx-ingres+cert-manager/echo-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - echo1.zemuldo.com
    - echo2.zemuldo.com
    secretName: echo-tls
  rules:
  - host: echo1.zemuldo.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.zemuldo.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
